--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,39 @@
-name: Deploy to Kubernetes
+name: CI/CD to Docker Hub and Minikube
 
 on:
   push:
     branches:
-      - master # Trigger deployment on push to main branch
+      - master
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Kubernetes context
+      - name: Set Docker Hub image tags
         run: |
-          kubectl config set-cluster my-cluster --server=https://my-k8s-server
-          kubectl config set-credentials my-user --token=$K8S_TOKEN
-          kubectl config set-context my-context --cluster=my-cluster --user=my-user
-          kubectl config use-context my-context
+          echo "FRONTEND_IMAGE=moawiz/frontend:latest" >> $GITHUB_ENV
+          echo "BACKEND_IMAGE=moawiz/backend:latest" >> $GITHUB_ENV
+          echo "MONGODB_IMAGE=moawiz/mongodb:latest" >> $GITHUB_ENV
 
-      - name: Build Docker images
+      - name: Build Docker Images
         run: |
-          docker build -t my-frontend ./frontend
-          docker build -t my-backend ./backend
-          docker build -t my-mongodb ./mongodb
+          docker build -t $FRONTEND_IMAGE "./travel to pakistan/frontend"
+          docker build -t $BACKEND_IMAGE "./travel to pakistan/backend"
+          docker build -t $MONGODB_IMAGE "./travel to pakistan/mongodb"
 
-      - name: Push Docker images to Docker Hub
+      - name: Push Docker Images
         run: |
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-          docker push my-frontend
-          docker push my-backend
-          docker push my-mongodb
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker push $FRONTEND_IMAGE
+          docker push $BACKEND_IMAGE
+          docker push $MONGODB_IMAGE
 
-      - name: Deploy to Kubernetes
+      - name: Deploy to Minikube
         run: |
-          kubectl apply -f k8s/namespace.yaml
-          kubectl apply -f k8s/frontend/deployment.yaml
-          kubectl apply -f k8s/frontend/service.yaml
-          kubectl apply -f k8s/backend/deployment.yaml
-          kubectl apply -f k8s/backend/service.yaml
-          kubectl apply -f k8s/mongodb/service.yaml
+          kubectl apply -f "./travel to pakistan/mongodb"
+          kubectl apply -f "./travel to pakistan/backend"
+          kubectl apply -f "./travel to pakistan/frontend"
