--- a/mongodb/deployment.yaml
+++ b/mongodb/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: mongodb
-          image: mongo:latest
+          image: moawiz/mongodb:latest
           ports:
             - containerPort: 27017
           volumeMounts:
