--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,25 +9,26 @@ jobs:
   deploy:
     runs-on: self-hosted
 
+    env:
+      FRONTEND_IMAGE: moawiz/travel-frontend:latest
+      BACKEND_IMAGE: moawiz/travel-backend:latest
+      MONGODB_IMAGE: moawiz/travel-mongodb:latest
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Build Docker Images
         run: |
-          docker build -t $FRONTEND_IMAGE "./travel to pakistan/frontend"
-          docker build -t $BACKEND_IMAGE "./travel to pakistan/backend"
-          docker build -t $MONGODB_IMAGE "./travel to pakistan/mongodb"
-
-      - name: Build Docker Images
-        run: |
-          docker build -t $FRONTEND_IMAGE "./travel to pakistan/frontend"
-          docker build -t $BACKEND_IMAGE "./travel to pakistan/backend"
-          docker build -t $MONGODB_IMAGE "./travel to pakistan/mongodb"
+          docker buildx build --load -t $FRONTEND_IMAGE "./travel to pakistan/frontend"
+          docker buildx build --load -t $BACKEND_IMAGE "./travel to pakistan/backend"
+          docker buildx build --load -t $MONGODB_IMAGE "./travel to pakistan/mongodb"
 
       - name: Push Docker Images
         run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           docker push $FRONTEND_IMAGE
           docker push $BACKEND_IMAGE
           docker push $MONGODB_IMAGE
