--- a/Backend/deployment.yaml
+++ b/Backend/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-deployment
+  namespace: travel-app-namespace
   labels:
     app: backend
 spec:
@@ -16,12 +17,12 @@ spec:
     spec:
       containers:
         - name: backend
-          image: moawiz/backend:latest
+          image: moawiz/travel-backend:latest
           ports:
             - containerPort: 5000
           env:
             - name: MONGODB_URI
-              value: "mongodb://mongodb-service:27017/tourism-db"
+              value: "mongodb://mongodb-service.travel-app-namespace.svc.cluster.local:27017/tourism-db"
             - name: JWT_SECRET
               value: "your_jwt_secret_here"
             - name: GOOGLE_CLIENT_ID
