--- a/mongodb/deployment.yaml
+++ b/mongodb/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb-deployment
+  namespace: travel-app-namespace
   labels:
     app: mongodb
 spec:
@@ -16,7 +17,7 @@ spec:
     spec:
       containers:
         - name: mongodb
-          image: moawiz/mongodb:latest
+          image: mongo:latest
           ports:
             - containerPort: 27017
           volumeMounts:
