--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,9 @@ jobs:
           minikube docker-env | Invoke-Expression
       - name: Build Docker Images
         run: |
-          docker build -t $FRONTEND_IMAGE "travel to pakistan/frontend"
-          docker build -t $BACKEND_IMAGE "travel to pakistan/backend"
+          docker build -t $FRONTEND_IMAGE "./travel to pakistan/frontend"
+          docker build -t $BACKEND_IMAGE "./travel to pakistan/backend"
+
       - name: Push Docker Images
         run: |
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
