--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,38 +20,42 @@ jobs:
 
       - name: Set up Docker to use Minikube's environment
         run: |
-          eval $(minikube docker-env)
-        shell: bash
+          & minikube docker-env --shell powershell | Invoke-Expression
+        shell: powershell
+
+      - name: Test Docker connection to Minikube
+        run: docker info
+        shell: powershell
 
       - name: Build Docker Images
         run: |
-          docker build -t $FRONTEND_IMAGE "./travel to pakistan/frontend"
-          docker build -t $BACKEND_IMAGE "./travel to pakistan/backend"
-        shell: bash
+          docker build -t $env:FRONTEND_IMAGE ".\travel to pakistan\frontend"
+          docker build -t $env:BACKEND_IMAGE ".\travel to pakistan\backend"
+        shell: powershell
 
       - name: Push Docker Images
         run: |
-          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-          docker push $FRONTEND_IMAGE
-          docker push $BACKEND_IMAGE
-        shell: bash
+          echo $env:DOCKER_PASSWORD | docker login -u $env:DOCKER_USERNAME --password-stdin
+          docker push $env:FRONTEND_IMAGE
+          docker push $env:BACKEND_IMAGE
+        shell: powershell
 
       - name: Create Kubernetes Secrets
         run: |
           kubectl create namespace travel-app-namespace --dry-run=client -o yaml | kubectl apply -f -
-          kubectl create secret generic google-secrets \
-            --from-literal=GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" \
-            --from-literal=GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}" \
+          kubectl create secret generic google-secrets `
+            --from-literal=GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" `
+            --from-literal=GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}" `
             -n travel-app-namespace --dry-run=client -o yaml | kubectl apply -f -
-        shell: bash
+        shell: powershell
 
       - name: Deploy to Minikube
         run: |
-          kubectl apply -f "./travel to pakistan/mongodb/pvc.yaml"
-          kubectl apply -f "./travel to pakistan/mongodb/deployment.yaml"
-          kubectl apply -f "./travel to pakistan/mongodb/service.yaml"
-          kubectl apply -f "./travel to pakistan/backend/deployment.yaml"
-          kubectl apply -f "./travel to pakistan/backend/service.yaml"
-          kubectl apply -f "./travel to pakistan/frontend/deployment.yaml"
-          kubectl apply -f "./travel to pakistan/frontend/service.yaml"
-        shell: bash
+          kubectl apply -f ".\travel to pakistan\mongodb\pvc.yaml"
+          kubectl apply -f ".\travel to pakistan\mongodb\deployment.yaml"
+          kubectl apply -f ".\travel to pakistan\mongodb\service.yaml"
+          kubectl apply -f ".\travel to pakistan\backend\deployment.yaml"
+          kubectl apply -f ".\travel to pakistan\backend\service.yaml"
+          kubectl apply -f ".\travel to pakistan\frontend\deployment.yaml"
+          kubectl apply -f ".\travel to pakistan\frontend\service.yaml"
+        shell: powershell
