--- a/mongodb/deployment.yaml
+++ b/mongodb/deployment.yaml
@@ -23,6 +23,23 @@ spec:
           volumeMounts:
             - name: mongodb-data
               mountPath: /data/db
+          readinessProbe:
+            tcpSocket:
+              port: 27017
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            tcpSocket:
+              port: 27017
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
       volumes:
         - name: mongodb-data
           persistentVolumeClaim:
