--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,12 @@ jobs:
           Stop-Service -Name "com.docker.service" -ErrorAction SilentlyContinue
         shell: powershell
 
+      - name: Reset Docker Contexts
+        run: |
+          Remove-Item -Path "$HOME\.docker\contexts" -Recurse -Force -ErrorAction SilentlyContinue
+          docker context use default
+        shell: powershell
+
       - name: Start Minikube
         run: |
           minikube status; if ($LASTEXITCODE -ne 0) { minikube start --driver=docker }
@@ -39,13 +45,13 @@ jobs:
         run: |
           & minikube docker-env --shell powershell | Invoke-Expression
           $minikubeIp = minikube ip
-          docker context create minikube --docker host=tcp://$minikubeIp:2376,ca=$HOME\.minikube\ca.crt,cert=$HOME\.minikube\certs\cert.pem,key=$HOME\.minikube\certs\key.pem --description "Minikube Docker"
+          docker context create minikube --docker host=tcp://$minikubeIp:2376,ca=$HOME\.minikube\ca.crt,cert=$HOME\.minikube\certs\cert.pem,key=$HOME\.minikube\certs\key.pem --description "Minikube Docker" --force
           docker context use minikube
         shell: powershell
 
       - name: Test Docker connection to Minikube
         run: |
-          docker info --format '{{.ServerVersion}}'; if ($LASTEXITCODE -ne 0) { Write-Output "Docker daemon not reachable"; & minikube docker-env --shell powershell | Invoke-Expression; docker info --format '{{.ServerVersion}}'; if ($LASTEXITCODE -ne 0) { exit 1 } }
+          docker info --format '{{.ServerVersion}}'; if ($LASTEXITCODE -ne 0) { Write-Output "Docker daemon not reachable"; & minikube docker-env --shell powershell | Invoke-Expression; docker context use minikube; docker info --format '{{.ServerVersion}}'; if ($LASTEXITCODE -ne 0) { exit 1 } }
         shell: powershell
 
       - name: Set up Docker Buildx
